[tool.poetry]
name = "pylint-boolean-naming"
version = "0.1.0"
description = "Pylint Plugin for enforcing boolean variable naming"
authors = ["Ryan Ozawa <ryan.ozawa21@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^3.0.3"
astroid = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
