[tool.poetry]
name = "pylint-boolean-naming"
version = "0.2.0"
description = "Pylint Plugin for enforcing boolean variable naming"
authors = ["Ryan Ozawa <ryan.ozawa21@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{ include = "pylint_boolean_naming", from = "." }]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^3.0.3"
astroid = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
pytest = "^8.0.0"


[tool.poetry.group.test.dependencies]
tox = "^4.12.1"
coverage = "^7.4.1"
tox-gh-actions = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88


[tool.ruff]
# Allow autofix for listed rules.
fix = true
show-fixes = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py38"


[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",
    "F",
    "W",   # pycodestyle warnings
    "C90", # Mccabe complexity
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "G",   # flake8-logging
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PD",  # pandas vet
    "TRY", # tryceratops,
    "PLR", # pylint: refactor
    "RUF",
]
ignore = ["D100"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "COM",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]

[tool.isort]
force_sort_within_sections = true
force_single_line = true
known_first_party = ["pylint_boolean_naming"]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "External Party"
import_heading_firstparty = "Local Code"
profile = "black"
group_by_package = true

[tool.mypy]
python_version = "3.8"
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
disable_error_code = "import-untyped"
packages = "pylint_boolean_naming"
ignore_missing_imports = true
